--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ MONGODB_URI=mongodb+srv://<user>:<password>@cluster0.example.mongodb.net/ResmiTe
 ABUSEIPDB_KEY=your_abuseipdb_api_key
 SESSION_SECRET=your_session_secret
 PORT=5000
+RECAPTCHA_SECRET=your_recaptcha_secret
